Fixed nutrition dropdown visibility issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -1477,6 +1477,7 @@ body {
 }
 
 .meal-planner__macros {
+  visibility: hidden;
   max-height: 0;
   padding: 0.2rem 0;
   margin: auto;
@@ -1486,6 +1487,7 @@ body {
 }
 
 .meal-planner__daily-nutrition-container--open .meal-planner__macros {
+  visibility: visible;
   max-height: 12.5rem;
 }
 
